--- a/index.html
+++ b/index.html
@@ -1,38 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emmanuel Jaimes</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-</head>
-
-<body class="bg-black text-white font-sans">
-  <div class="flex items-center justify-center min-h-screen px-4">
-    <div class="text-center">
-      <!-- header -->
-      <div class="mb-10">
-        <h1 class="text-3xl font-semibold">Emmanuel Jaimes</h1>
-        <p class="text-lg mt-2">Software Engineer / Developer</p>
-      </div>
-
-      <!-- connections -->
-      <div class="inline-flex gap-6 p-3 rounded-xl">
-        <a href="https://www.linkedin.com/in/jaimes-emmanuel" target="_blank">
-          <img src="/imgs/Linkedin.svg" alt="LinkedIn" class="hover:bg-blue-300 p-2 rounded-xl">
-        </a>
-        <a href="https://github.com/emmanuel-jaimes" target="_blank">
-          <img src="/imgs/Github.svg" alt="GitHub" class="hover:bg-purple-300 p-2 rounded-xl">
-        </a>
-        <a href="mailto:emnl.jms@gmail.com">
-          <img src="/imgs/Mail.svg" alt="Email" class="hover:bg-green-300 p-2 rounded-xl">
-        </a>
-        <a href="/info/emmanuelJaimes_Resume.pdf" download="resume.pdf">
-          <img src="/imgs/File_text.svg" alt="Resume" class="hover:bg-yellow-300 p-2 rounded-xl">
-        </a>
-      </div>
-    </div>
-  </div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/index.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Roboto:wght@100;300;400&display=swap');
+      </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>emmanuel jaimes</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
